# Rust-Professional

./: Cargo.toml  report.json
exercises/easy/: Cargo.toml  algorithm1.rs  algorithm10.rs  algorithm11.rs  algorithm12.rs  algorithm14.rs  algorithm16.rs  algorithm17.rs  algorithm18.rs  algorithm2.rs  algorithm20.rs  algorithm3.rs  algorithm4.rs  algorithm5.rs  algorithm6.rs  algorithm7.rs  algorithm8.rs  algorithm9.rs
exercises/easy/src/: algorithm10.rs  algorithm11.rs  algorithm12.rs  algorithm13.rs  algorithm14.rs  algorithm15.rs  algorithm16.rs  algorithm17.rs  algorithm18.rs  algorithm19.rs  algorithm5.rs  algorithm6.rs  algorithm7.rs  algorithm8.rs  algorithm9.rs  lib.rs
exercises/hard/solutiont1/src/: conjecture.rs  tests.rs
exercises/hard/solutiont2/src/: prime_factor.rs  tests.rs
exercises/hard/solutiont3/: Cargo.toml
exercises/hard/solutiont3/src/: district.rs  tests.rs
exercises/hard/solutiont4/src/: calc_time.rs  tests.rs
exercises/hard/solutiont5/src/: retirement.rs  tests.rs
exercises/normal/solution1/src/: count_distinct.rs
exercises/normal/solution2/src/: converter.rs
exercises/normal/solution3/src/: calc_logic.rs
exercises/normal/solution4/src/: rec_mc.rs
exercises/normal/solution5/src/: fibnacci.rs
