[package]
name = "cargotest"
version = "0.1.0"
edition = "2021"

# 指定要包含的文件或目录
include = [
    "src/**",       # 包含 src 目录下的所有文件
    "exercises/**",# 包含 exercises目录下的所有文件
]

[workspace]
members = [
    "./",
    "exercises/normal/solution*",
    "exercises/hard/solution*"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
termion = "1.5"
log = "0.4"
log4rs = "1.0"

# [[test]]
# name = "alg6"
# path = "exercises/easy/algorithm6.rs"